CHATS_SIT/force-app/main/default/objects/T_APPLN_DSBLTY__c.object
<CustomObject>
    <description>PEAK application disability information</description>
    <fields>
        <fullName>IDN_APPLN_DSBLTY__c</fullName>
        <label>IDN_APPLN_DSBLTY</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_INDIV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_APPLN_INDIV</label>
        <referenceTo>T_APPLN_INDIV__c</referenceTo>
        <relationshipLabel>Application Disabilities</relationshipLabel>
        <relationshipName>Application_Disabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IND_BLIND__c</fullName>
        <description>IND_BLIND</description>
        <label>IND_BLIND</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_CC_GIVE_ABLE__c</fullName>
        <description>IND_CC_GIVE_ABLE</description>
        <label>IND_CC_GIVE_ABLE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_YR_DSBL__c</fullName>
        <description>IND_YR_DSBL</description>
        <label>IND_YR_DSBL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Application Disability</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADSBLTY-{0}</displayFormat>
        <label>Application Disability ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Disabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>